syntax = "proto3";

option go_package = "/services/candlesticks/pkg/grpc/proto";

package candlesticks;

service CandlesticksService {
    rpc ReadCandlesticks(ReadCandlesticksRequest) returns (ReadCandlesticksResponse) {}
}

message Candlestick {
    string time = 1;
    double open = 2;
    double high = 3;
    double low = 4;
    double close = 5;
    double volume = 6;
}

message ReadCandlesticksRequest {
    string exchange_name = 1;
    string pair_symbol = 2;
    string period_symbol = 3;
    string start = 4;
    string end = 5;
    int64 limit = 6;
}

message ReadCandlesticksResponse {
    repeated Candlestick candlesticks = 1;
}
